--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "ng": "ng",
     "start": "ng serve --poll 5000",
     "build": "ng build --prod --build-optimizer",
-    "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-5/master/dist/",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "clean": "rm -rf node_modules"
   },
   "private": true,
   "dependencies": {
@@ -34,7 +34,7 @@
     "js-sha1": "^0.6.0",
     "ng2-charts": "^1.6.0",
     "ng2-truncate": "^1.3.17",
-    "node-sass": "^4.13.0",
+    "node-sass": "4.13.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "underscore": "^1.8.9",
@@ -42,7 +42,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.14",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "^8.3.14",
     "@angular/compiler-cli": "^8.2.12",
     "@angular/language-service": "^8.2.12",
@@ -53,7 +53,7 @@
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^2.1.0",
